Version 1.6.5+svn:
 * Language and translations:
   * Updated translations: Estonian, Greek, Indonesian, Russian, Swedish
 * Fixed some gcc-4.4.1 compilation problems (bug #14407)

Version 1.6.5:
 * Campaigns:
   * Legend of Wesmere:
     * Work around a possible crash at the end of scenario 7 (bug #14172)
   * Under the Burning Suns:
     * Fixed bug #13978: UtBS: "stun" ability doesn't modify enemy ZoC
 * Language and translations:
   * Updated translations: Chinese (Traditional), Czech, Dutch, Estonian,
     Finnish, French, German, Hungarian, Italian, Lithuanian, Polish, Russian,
     Serbian, Slovak
 * Music and sound effects:
   * Fixed bug #14239 (check_fogged ignored by sound sources)
 * User interface:
   * Removed the hotkey to enable/disable mouse scrolling
 * Miscellaneous and bugfixes:
   * Fix gcc 4.4 compilation errors (Debian bug #539546)
   * Fix ODR issues in gui2

Version 1.6.4:
 * Language and translations:
   * Updated translations: Finnish, French, German, Lithuanian, Polish,
     Serbian, Swedish
   * Properly translate dialog title (bug #13761)
   * Properly translate unit name and mark strings translatable (bug #13751)
   * Fixed language switch not affecting unit descriptions (bug #13827)
 * User interface:
   * Fixed bug #13831: Bug with team labels
 * WML Engine:
   * Petrified units no longer heal. (bug #13513)
 * Miscellaneous and bugfixes:
   * Fixed networking code regression that could lead to "Client disconnected"
     errors when creating a MP game

Version 1.6.3:
 * Campaigns:
   * The Hammer of Thursagan:
     * Updated portraits for Ratheln, Angarthing.
 * Language and i18n:
   * Updated translations: British English, Chinese (Traditional), Czech,
     Finnish, French, German, Greek, Hungarian, Icelandic, Italian, Lithuanian,
     Polish, Russian, Serbian, Slovak
 * User interface:
   * Fixed an multi-character UTF-8 handling bug in the password textbox
   * Increase the lineheight in the new dialogs