@@ -2,6 +2,8 @@ Version 1.6.5+svn:
  * Language and translations:
    * Updated translations: Estonian, Greek, Indonesian, Russian, Swedish
  * Fixed some gcc-4.4.1 compilation problems (bug #14407)
+ * Miscellaneous and bugfixes:
+   * Fixed "Revert all changes" feature in the map editor (bug #14266)
 
 Version 1.6.5:
  * Campaigns:
